// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failed state 1`] = `
.c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-all;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c4 a {
  color: #FFFFFF;
}

.c1 {
  box-sizing: border-box;
  margin-right: 56px;
  padding: 24px;
  padding-top: 16px;
  height: 100%;
  width: 600px;
  background-color: #1C254D;
  border: 1px solid;
  border-radius: 2px;
  border-color: #222C59;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 32px;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  padding: 8px;
  height: 200px;
  width: 100%;
  border: 0;
  border-radius: 4px;
  border-color: none;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #651FFF;
}

.c10:active {
  background: #354AA4;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #2C3A73;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 50px;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c17:active {
  opacity: 0.24;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c6 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-left: 24px;
  margin-right: 24px;
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 8px;
}

.c0 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
}

.c15 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  height: 34px;
  width: 260px;
  border-bottom: 1px solid;
  border-color: #1C254D;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c7 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c7 .react-select__control,
.c7 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c7 .react-select__control:hover,
.c7 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c7 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c7 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c7 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c7 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c7 .react-select__menu {
  margin-top: 0px;
}

.c7 .react-select__indicator-separator {
  display: none;
}

.c7 .react-select__loading-indicator {
  display: none;
}

.c7 .react-select--is-disabled .react-select__single-value,
.c7 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c7 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

.c12 {
  box-sizing: border-box;
  width: 260px;
  height: 150px;
  background-color: #ffffff;
  color: #000000;
  border-radius: 3px;
  position: absolute;
  z-index: 1;
  top: 40px;
}

.c12 .react-select__group,
.c12 .react-select__group-heading,
.c12 .react-select__menu-list {
  padding: 0;
  margin: 0;
}

.c12 .react-select__menu-list {
  margin-top: 10px;
}

.c12 .react-select__option--is-focused {
  background-color: inherit;
}

.c12 .react-select__option--is-focused:hover {
  background-color: #deebff;
}

.c12 .react-select-container {
  width: 300px;
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 16px;
  outline: none;
  width: 100%;
  background-color: #ffffff;
  margin-top: 16px;
  border-radius: 4px;
}

.c12 .react-select__menu {
  box-shadow: none;
}

.c12 .react-select__control {
  border-radius: 30px;
  background-color: #f0f2f4;
  margin: 0px 16px 10px 16px;
}

.c12 .react-select__control:hover {
  cursor: pointer;
}

.c12 .react-select__control--is-focused {
  border-color: transparent;
  box-shadow: none;
}

.c12 .react-select__placeholder {
  font-size: 14px;
}

.c12 .react-select__option {
  white-space: nowrap;
  padding: 9px 16px;
  border-top: 1px solid #eaeaea;
  font-weight: bold;
  font-size: 14px;
}

.c12 .react-select__option:hover {
  cursor: pointer;
}

.c12 .react-select__option:hover:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c12 .react-select__option .icon-checkmark-circle {
  color: transparent;
  margin-right: 10px;
}

.c12 .react-select__option--is-selected {
  background-color: inherit;
  color: inherit;
}

.c12 .react-select__indicators {
  display: none;
}

.c12 .react-select__selected .icon-checkmark-circle {
  color: #00bfa5;
}

.c12 .react-select__selected .icon-cross {
  color: #010B1C;
  display: none;
}

.c12 .react-select__selected:hover .icon-cross {
  display: block;
}

.c13 {
  box-sizing: border-box;
  width: 100%;
  background-color: #efefef;
  color: #324148;
  text-transform: none;
  padding: 3px 15px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      height="100%"
      width="600px"
    >
      <div
        class="c2"
      >
        Request Role Access
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
          kind="danger"
        >
          some error message
        </div>
        <div
          class="c5"
        >
          <label
            class="c6"
            font-size="0"
          >
            Roles Allowed to Request
          </label>
          <div
            class="c7"
          >
            <div
              class="react-select-container css-2b097c-container"
            >
              <div
                class="react-select__control css-yk16xz-control"
              >
                <div
                  class="react-select__value-container react-select__value-container--is-multi css-g1d714-ValueContainer"
                >
                  <div
                    class="react-select__placeholder css-1wa3eu0-placeholder"
                  >
                    Click to select a role
                  </div>
                  <div
                    class="css-b8ldur-Input"
                  >
                    <div
                      class="react-select__input"
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-4-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: Ubuntu2,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Helvetica,Arial,sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\"; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6q0nyr-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c8"
        >
          <label
            class="c6"
            font-size="0"
          >
            Request Reason
          </label>
          <textarea
            class="c9"
            height="200px"
            placeholder="Describe your request..."
            style="outline: none;"
            width="100%"
          >
            Some reason for requesting access for specified role.
          </textarea>
        </div>
      </div>
      <div
        class="c8"
      >
        <button
          class="c10"
          kind="primary"
        >
          Send Request
        </button>
        <button
          class="c11"
          kind="secondary"
        >
          Cancel
        </button>
      </div>
    </div>
    <div
      class="c8"
      style="position: relative;"
    >
      <div
        class="c12"
        style="display: none;"
      >
        <div
          class="react-select-container css-2b097c-container"
        >
          <div
            class="react-select__control react-select__control--menu-is-open css-yk16xz-control"
          >
            <div
              class="react-select__value-container react-select__value-container--is-multi css-g1d714-ValueContainer"
            >
              <div
                class="react-select__placeholder css-1wa3eu0-placeholder"
              >
                Type or select a name
              </div>
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="react-select__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="react-select-5-input"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: Ubuntu2,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Helvetica,Arial,sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\"; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="react-select__menu css-26l3qy-menu"
          >
            <div
              class="react-select__menu-list react-select__menu-list--is-multi css-4ljt47-MenuList"
            >
              <div
                class="react-select__group css-syji7d-Group"
              >
                <div
                  class="react-select__group-heading css-18ng2q5-group"
                  data="[object Object]"
                  id="react-select-5-group-1-heading"
                >
                  <div
                    class="c13"
                  >
                    Suggested Reviewers
                  </div>
                </div>
                <div>
                  <div
                    class="react-select__option css-yt9ioa-option"
                    id="react-select-5-option-1-0"
                    tabindex="-1"
                  >
                    <div
                      class="c14"
                      title="alice"
                    >
                      alice
                    </div>
                  </div>
                  <div
                    class="react-select__option css-yt9ioa-option"
                    id="react-select-5-option-1-1"
                    tabindex="-1"
                  >
                    <div
                      class="c14"
                      title="bob"
                    >
                      bob
                    </div>
                  </div>
                  <div
                    class="react-select__option css-yt9ioa-option"
                    id="react-select-5-option-1-2"
                    tabindex="-1"
                  >
                    <div
                      class="c14"
                      title="foo"
                    >
                      foo
                    </div>
                  </div>
                  <div
                    class="react-select__option css-yt9ioa-option"
                    id="react-select-5-option-1-3"
                    tabindex="-1"
                  >
                    <div
                      class="c14"
                      title="bar"
                    >
                      bar
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c15"
        height="34px"
        width="260px"
      >
        <div
          class="c16"
        >
          Reviewers
        </div>
        <button
          class="c17"
          kind="border"
          width="50px"
        >
          Edit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded state 1`] = `
.c1 {
  box-sizing: border-box;
  margin-right: 56px;
  padding: 24px;
  padding-top: 16px;
  height: 100%;
  width: 600px;
  background-color: #1C254D;
  border: 1px solid;
  border-radius: 2px;
  border-color: #222C59;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 32px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c7 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  padding: 8px;
  height: 200px;
  width: 100%;
  border: 0;
  border-radius: 4px;
  border-color: none;
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #651FFF;
}

.c9:active {
  background: #354AA4;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #2C3A73;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 50px;
}

.c16:active {
  opacity: 0.56;
}

.c16:hover,
.c16:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c16:active {
  opacity: 0.24;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-left: 24px;
  margin-right: 24px;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 8px;
}

.c0 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
}

.c14 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  height: 34px;
  width: 260px;
  border-bottom: 1px solid;
  border-color: #1C254D;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c6 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c6 .react-select__control,
.c6 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c6 .react-select__control:hover,
.c6 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c6 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c6 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c6 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c6 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c6 .react-select__menu {
  margin-top: 0px;
}

.c6 .react-select__indicator-separator {
  display: none;
}

.c6 .react-select__loading-indicator {
  display: none;
}

.c6 .react-select--is-disabled .react-select__single-value,
.c6 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c6 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

.c11 {
  box-sizing: border-box;
  width: 260px;
  height: 150px;
  background-color: #ffffff;
  color: #000000;
  border-radius: 3px;
  position: absolute;
  z-index: 1;
  top: 40px;
}

.c11 .react-select__group,
.c11 .react-select__group-heading,
.c11 .react-select__menu-list {
  padding: 0;
  margin: 0;
}

.c11 .react-select__menu-list {
  margin-top: 10px;
}

.c11 .react-select__option--is-focused {
  background-color: inherit;
}

.c11 .react-select__option--is-focused:hover {
  background-color: #deebff;
}

.c11 .react-select-container {
  width: 300px;
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 16px;
  outline: none;
  width: 100%;
  background-color: #ffffff;
  margin-top: 16px;
  border-radius: 4px;
}

.c11 .react-select__menu {
  box-shadow: none;
}

.c11 .react-select__control {
  border-radius: 30px;
  background-color: #f0f2f4;
  margin: 0px 16px 10px 16px;
}

.c11 .react-select__control:hover {
  cursor: pointer;
}

.c11 .react-select__control--is-focused {
  border-color: transparent;
  box-shadow: none;
}

.c11 .react-select__placeholder {
  font-size: 14px;
}

.c11 .react-select__option {
  white-space: nowrap;
  padding: 9px 16px;
  border-top: 1px solid #eaeaea;
  font-weight: bold;
  font-size: 14px;
}

.c11 .react-select__option:hover {
  cursor: pointer;
}

.c11 .react-select__option:hover:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c11 .react-select__option .icon-checkmark-circle {
  color: transparent;
  margin-right: 10px;
}

.c11 .react-select__option--is-selected {
  background-color: inherit;
  color: inherit;
}

.c11 .react-select__indicators {
  display: none;
}

.c11 .react-select__selected .icon-checkmark-circle {
  color: #00bfa5;
}

.c11 .react-select__selected .icon-cross {
  color: #010B1C;
  display: none;
}

.c11 .react-select__selected:hover .icon-cross {
  display: block;
}

.c12 {
  box-sizing: border-box;
  width: 100%;
  background-color: #efefef;
  color: #324148;
  text-transform: none;
  padding: 3px 15px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      height="100%"
      width="600px"
    >
      <div
        class="c2"
      >
        Request Role Access
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <label
            class="c5"
            font-size="0"
          >
            Roles Allowed to Request
          </label>
          <div
            class="c6"
          >
            <div
              class="react-select-container css-2b097c-container"
            >
              <div
                class="react-select__control css-yk16xz-control"
              >
                <div
                  class="react-select__value-container react-select__value-container--is-multi css-g1d714-ValueContainer"
                >
                  <div
                    class="react-select__placeholder css-1wa3eu0-placeholder"
                  >
                    Click to select a role
                  </div>
                  <div
                    class="css-b8ldur-Input"
                  >
                    <div
                      class="react-select__input"
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-2-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: Ubuntu2,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Helvetica,Arial,sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\"; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6q0nyr-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <label
            class="c5"
            font-size="0"
          >
            Request Reason
          </label>
          <textarea
            class="c8"
            height="200px"
            placeholder="Describe your request... (optional)"
            style="outline: none;"
            width="100%"
          />
        </div>
      </div>
      <div
        class="c7"
      >
        <button
          class="c9"
          kind="primary"
        >
          Send Request
        </button>
        <button
          class="c10"
          kind="secondary"
        >
          Cancel
        </button>
      </div>
    </div>
    <div
      class="c7"
      style="position: relative;"
    >
      <div
        class="c11"
        style="display: none;"
      >
        <div
          class="react-select-container css-2b097c-container"
        >
          <div
            class="react-select__control react-select__control--menu-is-open css-yk16xz-control"
          >
            <div
              class="react-select__value-container react-select__value-container--is-multi css-g1d714-ValueContainer"
            >
              <div
                class="react-select__placeholder css-1wa3eu0-placeholder"
              >
                Type or select a name
              </div>
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="react-select__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="react-select-3-input"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: Ubuntu2,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Helvetica,Arial,sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\"; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="react-select__menu css-26l3qy-menu"
          >
            <div
              class="react-select__menu-list react-select__menu-list--is-multi css-4ljt47-MenuList"
            >
              <div
                class="react-select__group css-syji7d-Group"
              >
                <div
                  class="react-select__group-heading css-18ng2q5-group"
                  data="[object Object]"
                  id="react-select-3-group-1-heading"
                >
                  <div
                    class="c12"
                  >
                    Suggested Reviewers
                  </div>
                </div>
                <div>
                  <div
                    class="react-select__option css-yt9ioa-option"
                    id="react-select-3-option-1-0"
                    tabindex="-1"
                  >
                    <div
                      class="c13"
                      title="alice"
                    >
                      alice
                    </div>
                  </div>
                  <div
                    class="react-select__option css-yt9ioa-option"
                    id="react-select-3-option-1-1"
                    tabindex="-1"
                  >
                    <div
                      class="c13"
                      title="bob"
                    >
                      bob
                    </div>
                  </div>
                  <div
                    class="react-select__option css-yt9ioa-option"
                    id="react-select-3-option-1-2"
                    tabindex="-1"
                  >
                    <div
                      class="c13"
                      title="foo"
                    >
                      foo
                    </div>
                  </div>
                  <div
                    class="react-select__option css-yt9ioa-option"
                    id="react-select-3-option-1-3"
                    tabindex="-1"
                  >
                    <div
                      class="c13"
                      title="bar"
                    >
                      bar
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c14"
        height="34px"
        width="260px"
      >
        <div
          class="c15"
        >
          Reviewers
        </div>
        <button
          class="c16"
          kind="border"
          width="50px"
        >
          Edit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`processing state 1`] = `
.c1 {
  box-sizing: border-box;
  margin-right: 56px;
  padding: 24px;
  padding-top: 16px;
  height: 100%;
  width: 600px;
  background-color: #1C254D;
  border: 1px solid;
  border-radius: 2px;
  border-color: #222C59;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 32px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c7 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  padding: 8px;
  height: 200px;
  width: 100%;
  border: 0;
  border-radius: 4px;
  border-color: none;
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #651FFF;
}

.c9:active {
  background: #354AA4;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #2C3A73;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 50px;
}

.c16:active {
  opacity: 0.56;
}

.c16:hover,
.c16:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c16:active {
  opacity: 0.24;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-left: 24px;
  margin-right: 24px;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 8px;
}

.c0 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
}

.c14 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  height: 34px;
  width: 260px;
  border-bottom: 1px solid;
  border-color: #1C254D;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c6 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c6 .react-select__control,
.c6 .react-select__control--is-focused {
  min-height: 40px;
  height: 40px;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c6 .react-select__control:hover,
.c6 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c6 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c6 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c6 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c6 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c6 .react-select__menu {
  margin-top: 0px;
}

.c6 .react-select__indicator-separator {
  display: none;
}

.c6 .react-select__loading-indicator {
  display: none;
}

.c6 .react-select--is-disabled .react-select__single-value,
.c6 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c6 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

.c11 {
  box-sizing: border-box;
  width: 260px;
  height: 150px;
  background-color: #ffffff;
  color: #000000;
  border-radius: 3px;
  position: absolute;
  z-index: 1;
  top: 40px;
}

.c11 .react-select__group,
.c11 .react-select__group-heading,
.c11 .react-select__menu-list {
  padding: 0;
  margin: 0;
}

.c11 .react-select__menu-list {
  margin-top: 10px;
}

.c11 .react-select__option--is-focused {
  background-color: inherit;
}

.c11 .react-select__option--is-focused:hover {
  background-color: #deebff;
}

.c11 .react-select-container {
  width: 300px;
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 16px;
  outline: none;
  width: 100%;
  background-color: #ffffff;
  margin-top: 16px;
  border-radius: 4px;
}

.c11 .react-select__menu {
  box-shadow: none;
}

.c11 .react-select__control {
  border-radius: 30px;
  background-color: #f0f2f4;
  margin: 0px 16px 10px 16px;
}

.c11 .react-select__control:hover {
  cursor: pointer;
}

.c11 .react-select__control--is-focused {
  border-color: transparent;
  box-shadow: none;
}

.c11 .react-select__placeholder {
  font-size: 14px;
}

.c11 .react-select__option {
  white-space: nowrap;
  padding: 9px 16px;
  border-top: 1px solid #eaeaea;
  font-weight: bold;
  font-size: 14px;
}

.c11 .react-select__option:hover {
  cursor: pointer;
}

.c11 .react-select__option:hover:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c11 .react-select__option .icon-checkmark-circle {
  color: transparent;
  margin-right: 10px;
}

.c11 .react-select__option--is-selected {
  background-color: inherit;
  color: inherit;
}

.c11 .react-select__indicators {
  display: none;
}

.c11 .react-select__selected .icon-checkmark-circle {
  color: #00bfa5;
}

.c11 .react-select__selected .icon-cross {
  color: #010B1C;
  display: none;
}

.c11 .react-select__selected:hover .icon-cross {
  display: block;
}

.c12 {
  box-sizing: border-box;
  width: 100%;
  background-color: #efefef;
  color: #324148;
  text-transform: none;
  padding: 3px 15px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      height="100%"
      width="600px"
    >
      <div
        class="c2"
      >
        Request Role Access
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <label
            class="c5"
            font-size="0"
          >
            Roles Allowed to Request
          </label>
          <div
            class="c6"
          >
            <div
              class="react-select-container css-2b097c-container"
            >
              <div
                class="react-select__control css-yk16xz-control"
              >
                <div
                  class="react-select__value-container react-select__value-container--is-multi css-g1d714-ValueContainer"
                >
                  <div
                    class="react-select__placeholder css-1wa3eu0-placeholder"
                  >
                    Click to select a role
                  </div>
                  <div
                    class="css-b8ldur-Input"
                  >
                    <div
                      class="react-select__input"
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-6-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: Ubuntu2,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Helvetica,Arial,sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\"; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6q0nyr-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <label
            class="c5"
            font-size="0"
          >
            Request Reason
          </label>
          <textarea
            class="c8"
            height="200px"
            placeholder="Describe your request..."
            style="outline: none;"
            width="100%"
          >
            Some reason for requesting access for specified role.
          </textarea>
        </div>
      </div>
      <div
        class="c7"
      >
        <button
          class="c9"
          disabled=""
          kind="primary"
        >
          Send Request
        </button>
        <button
          class="c10"
          disabled=""
          kind="secondary"
        >
          Cancel
        </button>
      </div>
    </div>
    <div
      class="c7"
      style="position: relative;"
    >
      <div
        class="c11"
        style="display: none;"
      >
        <div
          class="react-select-container css-2b097c-container"
        >
          <div
            class="react-select__control react-select__control--menu-is-open css-yk16xz-control"
          >
            <div
              class="react-select__value-container react-select__value-container--is-multi css-g1d714-ValueContainer"
            >
              <div
                class="react-select__placeholder css-1wa3eu0-placeholder"
              >
                Type or select a name
              </div>
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="react-select__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="react-select-7-input"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: Ubuntu2,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Helvetica,Arial,sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\"; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="react-select__menu css-26l3qy-menu"
          >
            <div
              class="react-select__menu-list react-select__menu-list--is-multi css-4ljt47-MenuList"
            >
              <div
                class="react-select__group css-syji7d-Group"
              >
                <div
                  class="react-select__group-heading css-18ng2q5-group"
                  data="[object Object]"
                  id="react-select-7-group-1-heading"
                >
                  <div
                    class="c12"
                  >
                    Suggested Reviewers
                  </div>
                </div>
                <div>
                  <div
                    class="react-select__option css-yt9ioa-option"
                    id="react-select-7-option-1-0"
                    tabindex="-1"
                  >
                    <div
                      class="c13"
                      title="alice"
                    >
                      alice
                    </div>
                  </div>
                  <div
                    class="react-select__option css-yt9ioa-option"
                    id="react-select-7-option-1-1"
                    tabindex="-1"
                  >
                    <div
                      class="c13"
                      title="bob"
                    >
                      bob
                    </div>
                  </div>
                  <div
                    class="react-select__option css-yt9ioa-option"
                    id="react-select-7-option-1-2"
                    tabindex="-1"
                  >
                    <div
                      class="c13"
                      title="foo"
                    >
                      foo
                    </div>
                  </div>
                  <div
                    class="react-select__option css-yt9ioa-option"
                    id="react-select-7-option-1-3"
                    tabindex="-1"
                  >
                    <div
                      class="c13"
                      title="bar"
                    >
                      bar
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c14"
        height="34px"
        width="260px"
      >
        <div
          class="c15"
        >
          Reviewers
        </div>
        <button
          class="c16"
          kind="border"
          width="50px"
        >
          Edit
        </button>
      </div>
    </div>
  </div>
</div>
`;
